Fixed imports and improved class security