@@ -1,28 +1,22 @@
 package com.voporter.androidporter;
 
-/**
- * Created by Lovro on 22.12.2016..
- */
-
-import android.widget.TextView;
-
 import org.json.JSONException;
 import org.json.JSONObject;
 
-public class UDPClientWrapper {
-    String dstAddress;
-    int dstPort;
+class UDPClientWrapper {
+    private String dstAddress;
+    private int dstPort;
 
     UDPClientWrapper(String address, int port){
         dstAddress = address;
         dstPort = port;
     }
 
-    public void SendXY(double x, double y){
+    void SendXY(double x, double y){
         JSONObject jsonObject = new JSONObject();
         try {
-            jsonObject.put("x", new Double(x));
-            jsonObject.put("y", new Double(y));
+            jsonObject.put("x", Double.valueOf(x));
+            jsonObject.put("y", Double.valueOf(y));
 
             UDPClient myClient = new UDPClient(dstAddress, dstPort);
 
@@ -30,16 +24,15 @@ public class UDPClientWrapper {
 
             myClient.execute();
 
-        }catch (JSONException e){
-            // TODO: Something - error
+        } catch (JSONException e){
             e.printStackTrace();
         }
     }
 
-    public void SendJump(){
+    void SendJump(){
         JSONObject jsonObject = new JSONObject();
         try {
-            jsonObject.put("jump", new Integer(1));
+            jsonObject.put("jump", 1);
 
             UDPClient myClient = new UDPClient(dstAddress, dstPort);
 
@@ -48,7 +41,6 @@ public class UDPClientWrapper {
             myClient.execute();
 
         }catch (JSONException e){
-            // TODO: Something - error
             e.printStackTrace();
         }
     }
